--- a/Workshop/총주식종목 가져오기.ipynb
+++ b/Workshop/총주식종목 가져오기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -11,18 +11,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20130325\n",
-      "http://marketdata.krx.co.kr/contents/COM/GenerateOTP.jspx?name=fileDown&filetype=csv&url=MKD/04/0404/04040200/mkd04040200_01&market_gubun=ALL&indx_ind_cd=&sect_tp_cd=&pagePath=%2Fcontents%2FMKD%2F04%2F0404%2F04040200%2FMKD04040200.jsp&schdate=20130325\n",
-      "Sun Mar 27 23:57:47 2016 UTC\n",
-      "20140325\n",
-      "http://marketdata.krx.co.kr/contents/COM/GenerateOTP.jspx?name=fileDown&filetype=csv&url=MKD/04/0404/04040200/mkd04040200_01&market_gubun=ALL&indx_ind_cd=&sect_tp_cd=&pagePath=%2Fcontents%2FMKD%2F04%2F0404%2F04040200%2FMKD04040200.jsp&schdate=20140325\n",
-      "Sun Mar 27 23:57:54 2016 UTC\n",
-      "20150325\n",
-      "http://marketdata.krx.co.kr/contents/COM/GenerateOTP.jspx?name=fileDown&filetype=csv&url=MKD/04/0404/04040200/mkd04040200_01&market_gubun=ALL&indx_ind_cd=&sect_tp_cd=&pagePath=%2Fcontents%2FMKD%2F04%2F0404%2F04040200%2FMKD04040200.jsp&schdate=20150325\n",
-      "Sun Mar 27 23:58:01 2016 UTC\n",
-      "20160325\n",
-      "http://marketdata.krx.co.kr/contents/COM/GenerateOTP.jspx?name=fileDown&filetype=csv&url=MKD/04/0404/04040200/mkd04040200_01&market_gubun=ALL&indx_ind_cd=&sect_tp_cd=&pagePath=%2Fcontents%2FMKD%2F04%2F0404%2F04040200%2FMKD04040200.jsp&schdate=20160325\n",
-      "Sun Mar 27 23:58:13 2016 UTC\n"
+      "start...\n",
+      "20140329 OK  Tue Mar 29 08:44:30 2016 UTC\n",
+      "20150329 OK  Tue Mar 29 08:44:35 2016 UTC\n",
+      "20160329 OK  Tue Mar 29 08:44:47 2016 UTC\n",
+      "end...\n"
      ]
     }
    ],
@@ -31,7 +24,6 @@
     "import requests\n",
     "import time\n",
     "import random\n",
-    "from time import ctime\n",
     "\n",
     "# path and filename for saving download file\n",
     "dirpath=\"./dat/\" \n",
@@ -41,20 +33,18 @@
     "url = \"http://marketdata.krx.co.kr/contents/COM/GenerateOTP.jspx?name=fileDown&filetype=csv\" \\\n",
     "      \"&url=MKD/04/0404/04040200/mkd04040200_01&market_gubun=ALL&indx_ind_cd=&sect_tp_cd=\" \\\n",
     "      \"&pagePath=%2Fcontents%2FMKD%2F04%2F0404%2F04040200%2FMKD04040200.jsp&schdate=\"\n",
-    "# base url for making downloading file\n",
+    "# base url for downloading file\n",
     "download_url = \"http://file.krx.co.kr/download.jspx\"\n",
     "\n",
     "# set the terms of search\n",
-    "from_year = 2013\n",
+    "from_year = 2014\n",
     "to_year=2016\n",
-    "date = \"0325\"\n",
+    "date = \"0329\"\n",
     "\n",
-    "# loop until terms\n",
+    "print (\"start...\")\n",
     "for year in range(from_year, to_year + 1):\n",
     "    search_date = str(year)+date\n",
-    "    print (search_date)\n",
     "    req_url = url + search_date\n",
-    "    print (req_url)\n",
     "    \n",
     "    download_signautre = urllib.request.urlopen(req_url).read()\n",
     "    formdata = {'code':download_signautre}\n",
@@ -67,7 +57,9 @@
     "    \n",
     "    # sleep few seconds\n",
     "    time.sleep(random.randint(1,10))\n",
-    "    print (str(ctime()) + \" UTC\")"
+    "    print (search_date + \" OK \", str(time.ctime()) + \" UTC\")\n",
+    "\n",
+    "print (\"end...\")"
    ]
   },
   {
